# lib.cpp.base.pbni-framework

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ClassDescription.h  Doxyfile  Errors.h  Framework.cpp  Framework.h  Makefile  MethodDescription.h  PBArray.h  PBBlob.cpp  PBBlob.h  PBDateTimes.cpp  PBDateTimes.h  PBNumbers.h  PBObjects.h  PBString.cpp  PBString.h  PBTypes.h  README.md  dllmain.cpp  doxybook.json  lib.cpp.base.pbni-framework.cmake  mingw-exports.def  mkdocs.yml  vcpkg.json
.doxybook/: git.json  mkdocs.json
cmake/: pbni-framework-config.cmake.in
docs/: doxygen.md  errors.md  index.md  libraries.md  powerbuilder.md  quick-start.md  variables.md
docs/css/: mkdocs.css
docs/doxygen/: index_classes.md  index_examples.md  index_files.md  index_groups.md  index_namespaces.md  index_pages.md
docs/doxygen/Classes/: classInf_1_1IClassDescription.md  classInf_1_1IMethodDescription.md  classInf_1_1PBBlob.md  classInf_1_1PBDate.md  classInf_1_1PBDateTime.md  classInf_1_1PBDecimal.md  classInf_1_1PBNI__Class.md  classInf_1_1PBNI__Exception.md  classInf_1_1PBNI__Framework.md  classInf_1_1PBNI__IncorrectArgumentsException.md  classInf_1_1PBNI__IndexOutOfBoundsException.md  classInf_1_1PBNI__InvalidFieldException.md  classInf_1_1PBNI__NullPointerException.md  classInf_1_1PBNI__PowerBuilderException.md  classInf_1_1PBObject.md  classInf_1_1PBString.md  classInf_1_1PBTime.md  class_inf_1_1_class_description.md  class_inf_1_1_i_class_description.md  class_inf_1_1_i_method_description.md  class_inf_1_1_method_description.md  class_inf_1_1_p_b_array.md  class_inf_1_1_p_b_blob.md  class_inf_1_1_p_b_date.md  class_inf_1_1_p_b_date_time.md  class_inf_1_1_p_b_decimal.md  class_inf_1_1_p_b_n_i___class.md  class_inf_1_1_p_b_n_i___exception.md  class_inf_1_1_p_b_n_i___framework.md  class_inf_1_1_p_b_n_i___incorrect_arguments_exception.md  class_inf_1_1_p_b_n_i___index_out_of_bounds_exception.md  class_inf_1_1_p_b_n_i___invalid_field_exception.md  class_inf_1_1_p_b_n_i___null_pointer_exception.md  class_inf_1_1_p_b_n_i___power_builder_exception.md  class_inf_1_1_p_b_object.md  class_inf_1_1_p_b_string.md  class_inf_1_1_p_b_time.md  structInf_1_1Type.md  struct_inf_1_1_helper_1_1_acquired_value.md  struct_inf_1_1_helper_1_1_fixed_string.md  (+9 more)
docs/doxygen/Files/: AcquiredValue_8h.md  ClassDescription_8h.md  Errors_8h.md  Framework_8h.md  MethodDescription_8h.md  PBArray_8h.md  PBBlob_8h.md  PBDateTimes_8h.md  PBNumbers_8h.md  PBObjects_8h.md  PBString_8h.md  PBTypes_8h.md  _acquired_value_8h.md  _class_description_8h.md  _errors_8h.md  _framework_8h.md  _method_description_8h.md  _p_b_array_8h.md  _p_b_blob_8h.md  _p_b_date_times_8h.md  _p_b_numbers_8h.md  _p_b_objects_8h.md  _p_b_string_8h.md  _p_b_types_8h.md  dir_68267d1309a1af8e8297ef4c3efbcdba.md
docs/doxygen/Namespaces/: namespaceInf.md  namespace_inf.md  namespace_inf_1_1_helper.md  namespacestd.md
src/: AcquiredValue.h  CMakeLists.txt  ClassDescription.h  Errors.h  Framework.cpp  Framework.h  Helper.h  MethodDescription.h  PBAny.cpp  PBAny.h  PBArray.h  PBBlob.cpp  PBBlob.h  PBDateTimes.cpp  PBDateTimes.h  PBEntry.cpp  PBEnums.h  PBNumbers.cpp  PBNumbers.h  PBObjects.h  PBString.cpp  PBString.h  PBTypes.cpp  PBTypes.h  PBValue.h  Strings.h
src/descriptions/: MethodDescription.h
src/types/: PBArray.h  PBBlob.cpp  PBBlob.h  PBDateTimes.cpp  PBDateTimes.h  PBNumbers.h  PBObjects.h  PBString.cpp  PBString.h
test/cpp/: CMakeLists.txt  CMakePresets.json  vcpkg.json
test/cpp/src/: tester.cpp  tester.h
test/pb/: Makefile  exf.ini  exf1.pbl  test.pbd  test.pbl  test.pbt  test.usr.opt  test.xml  tests.pbw  tst1.pbd  tst1.pbl
